# rusty-reader

./: Cargo.toml  README.md  books.toml  repos.toml
src/: main.rs  repo.rs
