[package]
name = "rusty-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dialoguer = {version = "0.10.3", features = ["fuzzy-select"]}
#tui = { version = "0.19.0", features = ["termion"]}
